# biodivine-algo-bdd-scc

./: .coderabbit.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: algorithm_trait.rs  chain.rs  lib.rs
src/algorithm/: mod.rs  trapping.rs
src/algorithm/reachability/: iterative_union.rs  mod.rs  reachability_algorithm.rs  reachability_state.rs  step_operators.rs
src/algorithm/reachability/tests/: llm_example_network.rs  llm_example_tests.rs  llm_test_bfs.rs  llm_test_model_comparison.rs  mod.rs
src/algorithm/scc/: chain.rs  fwd_bwd.rs  llm_tests.rs  mod.rs  scc_config.rs  slice.rs
src/algorithm/scc/tests/: llm_test_long_lived.rs  llm_test_model_comparison.rs  llm_tests.rs  mod.rs
src/algorithm/test_utils/: llm_example_network.rs  llm_transition_builder.rs  mod.rs
src/algorithm/trapping/: mod.rs
src/algorithm/trapping/tests/: llm_example_tests.rs  mod.rs
src/algorithm/trimming/: iterative_subtraction.rs  mod.rs  step_operators.rs  tests.rs
src/algorithm/trimming/tests/: llm_example_tests.rs  mod.rs
src/algorithm_2/: mod.rs
src/algorithm_2/reachability/: iterative_union.rs  mod.rs  reachability_config.rs  step_operators.rs
src/algorithm_2/reachability/tests/: llm_example_tests.rs  llm_test_model_comparison.rs
src/algorithm_2/scc/: fwd_bwd.rs  llm_tests.rs  mod.rs
src/algorithm_2/test_utils/: llm_example_network.rs  llm_transition_builder.rs  mod.rs
src/algorithm_trait/: computation.rs  generator.rs  mod.rs
src/algorithm_trait_2/: computation.rs  generator.rs  mod.rs
src/attractor/: attractor_config.rs  itgr.rs  mod.rs  xie_beerel.rs
src/attractor/tests/: llm_serialization_tests.rs  llm_test_model_comparison.rs  llm_tests.rs  mod.rs
src/reachability/: iterative_union.rs  mod.rs  reachability_config.rs  reachability_state.rs  step_operators.rs
src/reachability/tests/: llm_example_tests.rs  llm_serialization_tests.rs  llm_test_model_comparison.rs  mod.rs
src/reachability_utils/: algorithm_naive.rs  llm_naive_algorithm_tests.rs  llm_test_network.rs  mod.rs  test_llm_algorithm_naive.rs
src/scc/: chain.rs  fwd_bwd.rs  mod.rs  scc_config.rs
src/scc/tests/: llm_serialization_tests.rs  llm_test_long_lived.rs  llm_test_model_comparison.rs  llm_tests.rs  mod.rs
src/test_utils/: llm_example_network.rs  llm_transition_builder.rs  mod.rs
src/trapping/: llm_tests.rs  mod.rs  step_operators.rs
src/trimming/: iterative_subtraction.rs  llm_tests.rs  mod.rs  step_operators.rs  tests.rs
