[package]
name = "biodivine-lib-algo-scc"
version = "0.1.0"
edition = "2024"

[features]
build-binary = ["clap", "env_logger"]

[dependencies]
biodivine-lib-param-bn = ">=0.6.2, <1.0.0"
cancel-this = "0.4"
log = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
test-generator = "0.3"
env_logger = "0.11"

[lib]
name = "biodivine_lib_algo_scc"
path = "src/lib.rs"

[[bin]]
name = "scc"
path = "src/bin/scc.rs"
required-features = ["build-binary"]