[package]
name = "biodivine-algo-bdd-scc"
version = "0.2.0"
edition = "2024"
authors = ["Samuel Pastva <daemontus@gmail.com>", "Lukáš Chudíček"]
description = "BDD-based algorithms for symbolic SCC detection in Boolean networks"
repository = "https://github.com/sybila/biodivine-algo-bdd-scc"
readme = "README.md"
keywords = ["bdd", "boolean-network", "scc", "symbolic", "reachability"]
categories = ["algorithms", "science"]
license = "MIT"
rust-version = "1.88"
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE"]

[features]
build-binary = ["clap", "env_logger"]
serde = ["dep:serde", "biodivine-lib-param-bn/serde", "computation-process/serde"]

[dependencies]
biodivine-lib-param-bn = ">=0.7, <1.0.0"
cancel-this = "0.4"
log = "0.4"
computation-process = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
test-generator = "0.3"
env_logger = "0.11"
serde_json = "1.0"

# LTO is recommended to reduce overhead from `computation-process` and `cancel-this`.
[profile.release]
lto = true

[lib]
name = "biodivine_algo_bdd_scc"
path = "src/lib.rs"

[[bin]]
name = "biodivine_scc"
path = "src/bin/biodivine_scc.rs"
required-features = ["build-binary"]

[[bin]]
name = "biodivine_attractor"
path = "src/bin/biodivine_attractor.rs"
required-features = ["build-binary"]